# agentic_ai_course

./: .env.example  .gitignore  AGENTIC_AI_BLUEPRINT.md  Dockerfile.sandbox  INDUSTRY_AGENT_DETAILS.md  LEARNING_DAILY_TEMPLATE.md  LEARNING_LOG.md  LEARNING_PATH_14_DAYS.md  NAVIGATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.agents/skills/tool-schema-design/: SKILL.md
.claude/skills/agentic-design-review/: SKILL.md
.claude/skills/guardrail-setup/: SKILL.md
.cursor/rules/: agentic-ai.mdc
.github/instructions/: agentic-ai.instructions.md
.windsurf/rules/: agentic-ai.md
agentic-ai-skills/: AGENTS.md  CLAUDE.md  README.md  validate.sh
agentic-ai-skills/scripts/: sync-rules.sh
data/: sample_employees.csv  sample_sales.csv  sample_timeseries.csv
docs/: index.md
docs/linkedin/: COLAB_NOTEBOOK_EXECUTION_GUIDE.md  LINKEDIN_14_DAY_TRACKER.csv  LINKEDIN_SOTA_AGENTIC_AI_14_DAY_SERIES.md  OPEN_SOURCE_RESOURCE_BANK.md  PUBLISH_AND_HOST.md
learning_outputs/: README.md
notebooks/: 01_foundations.ipynb  02_tool_calling.ipynb  03_code_gen_exec.ipynb  04_react_loop.ipynb  05_memory_context.ipynb  06_evaluation.ipynb  07_observability.ipynb  08_full_agent.ipynb  09_sota_masterclass.executed.executed.ipynb  09_sota_masterclass.executed.ipynb  09_sota_masterclass.ipynb  index.html
scripts/: preflight_checks.sh
src/analyst/: __init__.py  agent.py  api.py  models.py
tests/: test_agent_evals.py  test_api.py  test_guardrails.py  test_prompting.py  test_reliability.py  test_sandbox.py  test_sandbox_adapters.py  test_sql_safety.py  test_tools.py
(+26 files in other folders)
