[project]
name = "agentic-ai-data-analyst"
version = "0.1.0"
description = "Production-grade Data Analyst Agent — learning project for Agentic AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.1",
    "pydantic-ai-litellm>=0.1",
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "duckdb>=0.9",
    "docker>=7.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "tabulate>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
eval = ["langfuse>=2.0"]
cloud = ["e2b-code-interpreter>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
observability = ["logfire>=0.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
